samples/_failures_safe/1761391065_7ea957_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_65062d88.c: In function ‘main’:
./samples/SAFE/__tmp_65062d88.c:159:5: error: expected declaration or statement at end of input
  159 |     printf("Shortest distances from node %d:\n", start_node);
      |     ^~~~~~
